--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <link rel="stylesheet" type="text/css" href="dist/assets/css/main.css">
     </head>
     <body>
-    <header>
-        <h1>Page Title</h1>
-    </header>
     <section>
-        <h2>Sub heading</h2>
-        <p>Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.</p>
-        <h2>Sub heading</h2>
-        <p>Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.</p>
+        <article>
+            <h1>Page Title</h1>
+            <h2>Sub heading</h2>
+            <p>Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.</p>
+            <h2>Sub heading</h2>
+            <p>Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.</p>
+            <p>Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.Lorem ipsum Est irure eiusmod qui magna dolor consectetur commodo enim et commodo sed culpa ex adipisicing amet ut minim qui in cillum magna consectetur.</p>
+        </article>
     </section>
 
         
